Update mod.conf, reformat init.lua, and add luacheckrc

--- a/mod.conf
+++ b/mod.conf
@@ -1,1 +1,7 @@
 name = death_messages
+title = Death Messages
+author = Evergreen
+description = Sends a chat message when a player dies (with customizable messages)
+license = GPL v3
+forum = https://forum.minetest.net/viewtopic.php?t=8821
+version = 0.1.4
